--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Hello World</h1>
+        <p>Que bom te ver por aqui, Fulano</p>
+
+    </header>
+
+    <section>
+        <h2>HTML</h2>
+        <P>HyperText Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura sua página web.</P>
+
+        <h2> CSS</h2>
+        <P>Cascading Style Sheets (em português, Folhas de Estilo em Cascata) estiliza a sua página web</P>
+        <img src="imagem/Olá Mundo.png"
+            alt="imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas"
+            </section>
+
+        <footer>
+            <p>Uma página desenvolvida por Prof Helma</p>
+
+        </footer>
+
+
 </body>
+
 </html>
