--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
      <link rel="stylesheet" href="style.css">
+     <script src="main.js"></script>
 
 
 </head>
@@ -16,23 +17,19 @@
         <p>Que bom te ver por aqui, <span id="nome-usuário">Fulano</span></p>
 
     </header>
-
+    prompt("Qual o seu nome:");
     <section>
         <h2>HTML</h2>
         <P><span class="texto-inglês">Hypertext Markup Language </span>(em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P>
 
         <h2> CSS</h2>
         <P><span class="texto-inglês">Cascading Style Sheets </span>(em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
-        <img src="imagem/Olá Mundo.png"
-            alt="imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas"
-            </section>
+        <img src="imagem/Olá Mundo.png" alt="imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas"
+        </section>
 
         <footer>
             <p>Uma página desenvolvida por Prof Helma</p>
-
         </footer>
-
-
+        <script src="main.js"></script>
 </body>
-
 </html>
